<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorC5"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/btn_login_ll"
        android:orientation="vertical"
        android:paddingBottom="32dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addstore_choose"
                android:textColor="@color/colorC3"
                android:textSize="15sp" />

            <com.push.PushMerchant.view.IconFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="3dp"
                android:text="@string/right_back" />

        </RelativeLayout>

        <View style="@style/login_view" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regist_shen_shi_qu"
                android:textColor="@color/colorC3"
                android:textSize="15sp" />

            <com.push.PushMerchant.view.IconFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="3dp"
                android:text="@string/right_back" />

        </RelativeLayout>

        <View style="@style/login_view" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="22dp"
            android:background="@null"
            android:hint="@string/addstore_store_name"
            android:textColorHint="@color/colorC3"
            android:textSize="15sp" />

        <View style="@style/login_view" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="22dp"
            android:background="@null"
            android:hint="@string/addstore_contacts"
            android:textColorHint="@color/colorC3"
            android:textSize="15sp" />

        <View style="@style/login_view" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="22dp"
            android:background="@null"
            android:hint="@string/addstore_contacts_phone"
            android:inputType="number"
            android:textColorHint="@color/colorC3"
            android:textSize="15sp" />

        <View style="@style/login_view" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addstore_location"
                android:textColor="@color/colorC3"
                android:textSize="15sp" />

            <!--<com.push.PushMerchant.view.IconFontTextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_marginTop="3dp"-->
                <!--android:text="@string/icon_address"-->
                <!--android:textSize="@dimen/text18spF1" />-->

        </RelativeLayout>

        <View style="@style/login_view" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/btn_addstore_ship"
        android:gravity="center_horizontal"
        android:text="@string/addstore"
        android:textColor="@color/colorCC"
        android:textSize="17sp" />
</LinearLayout>