<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/rl_bg"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginTop="-70dp"
    android:background="@drawable/btn_login_ll"
    android:orientation="vertical"
    tools:showIn="@layout/ac_login">

    <EditText
        android:id="@+id/et_login_num"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@null"
        android:drawableLeft="@mipmap/phone"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/login_phone"
        android:inputType="number"
        android:paddingLeft="38dp"
        android:textColorHint="@color/colorC3"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorC4" />

    <EditText
        android:id="@+id/et_login_psw"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:drawableLeft="@mipmap/key"
        android:drawablePadding="8dp"
        android:hint="@string/login_psw"
        android:inputType="textPassword"
        android:paddingLeft="38dp"
        android:textColorHint="@color/colorC3"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorC4" />

    <TextView
        android:id="@+id/tv_login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="48dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/login_forget"
        android:textColor="@color/colorC3"
        android:textSize="13sp" />
</LinearLayout>